# inqube

./: .gitignore  README.md  pyproject.toml
inqube/: __init__.py  __main__.py  configs.py  credentials.py  exceptions.py
inqube/processors/: __init__.py  drop_columns.py
inqube/readers/: __init__.py  gsheets.py
inqube/utils/: dateutils.py  fileutils.py  requestutils.py
inqube/writers/: __init__.py  fs.py
tests/: sample.py
